--- a/source/lecture1/source.tex
+++ b/source/lecture1/source.tex
@@ -712,7 +712,7 @@ cmake --build .
 \item Оси камеры (вперёд, вправо, вверх): векторы, задающие ориентацию камеры
 \pause
 \begin{itemize}
-\item \alert{\textbf{N.B.}} Будем считать, что оси в таком порядке задают \textit{правую} систему координат
+\item \alert{\textbf{N.B.}} Будем считать, что оси в таком порядке задают \textit{левую} систему координат
 \end{itemize}
 \pause
 \item Угол обзора камеры по ширине и высоте (\textit{FOV -- field of view})
