--- a/source/practice1/source.tex
+++ b/source/practice1/source.tex
@@ -55,8 +55,8 @@
 \item Боту нужно послать команду вида
 \usemintedstyle{solarized-light}
 \begin{minted}[bgcolor=lightbg]{bash}
-/submit practice1 github.com/ivanov_vanya/practice1.git
-  [ path-inside-repo ]
+/submit practice1 https://github.com/vanya/practice1.git
+  [ path-inside-repo [ branch ] ]
 \end{minted}
 \pause
 \item В репозитории по указанному пути должны быть скрипты \texttt{build.sh} и \texttt{run.sh}
