--- a/source/lecture2/source.tex
+++ b/source/lecture2/source.tex
@@ -1,6 +1,6 @@
 % (c) Nikita Lisitsa, lisyarus@gmail.com, 2024
 
-\documentclass[10pt]{beamer}
+\documentclass[10pt,handout]{beamer}
 
 \usepackage[T2A]{fontenc}
 \usepackage[russian]{babel}
