--- a/source/lecture2/source.tex
+++ b/source/lecture2/source.tex
@@ -632,7 +632,7 @@ A^{T}N' = N \quad\Longrightarrow\quad N' = (A^T)^{-1} N
 \pause
 \item Направление отражённого луча \begin{math}R\end{math} можно вычислить по формуле 
 \begin{equation*}
-R = 2N\cdot(N \cdot L) - D
+R = 2N\cdot(N \cdot L) - L
 \end{equation*}
 \pause
 \item У нас \begin{math}L=-D\end{math}, где \begin{math}D\end{math} -- направление луча из камеры, и формула переписывается как
@@ -783,7 +783,7 @@ R = D - 2N\cdot(N \cdot D)
 \begin{equation*}
 \begin{gathered}
 \cos\theta_1 = N\cdot L \\
-\sin\theta_2 = \frac{\eta_1}{\eta_2}\sqrt{1-\cos^2\theta_2} = \frac{\eta_1}{\eta_2}\sqrt{1-(N\cdot L)^2} \\
+\sin\theta_2 = \frac{\eta_1}{\eta_2}\sqrt{1-\cos^2\theta_1} = \frac{\eta_1}{\eta_2}\sqrt{1-(N\cdot L)^2} \\
 \cos\theta_2 = \sqrt{1 - \sin^2\theta_2} \\
 R = \frac{\eta_1}{\eta_2}(-L) + \left(\frac{\eta_1}{\eta_2}\cos\theta_1 - \cos\theta_2\right)\cdot N
 \end{gathered}
