--- a/source/lecture3/source.tex
+++ b/source/lecture3/source.tex
@@ -1124,15 +1124,17 @@ y = \sqrt{1-z^2}\sin\phi
 \item Итак, общий алгоритм вычисления изображения с помощью трассировки лучей и Монте-Карло интегрирования для решения уравнения рендеринга таков:
 \pause
 \begin{itemize}
-\item Генерируем луч из камеры в центр пикселя в направлении \begin{math}d\end{math}
+\item Генерируем лучи из камеры в центр пикселя в направлении \begin{math}d\end{math}
 \pause
-\item Вычисляем пересечение луча со сценой
+\item Вычисляем пересечение каждого луча со сценой
 \pause
 \item В точке пересечения вычисляем \begin{math}L_{out}(\omega)\end{math} (\begin{math}\omega=-d\end{math}) как сумму излучения объекта в этой точке \begin{math}L_e(\omega)\end{math} и интеграла от входящего излучения
 \pause
 \item Конкретный способ вычисления интеграла зависит от типа материала, но обычно сводится к Монте-Карло интегрированию \textbf{одним семплом}
 \pause
-\item Для вычисления значения в семплах рекурсивно пускаем дополнительные лучи
+\item Для вычисления значения \begin{math}L_{in}(\omega)\end{math} в семплах рекурсивно пускаем дополнительные лучи
+\pause
+\item Усредняем цвет всех лучей, выпущенных из пикселя -- это и есть \underline{цвет пикселя}
 \end{itemize}
 \end{itemize}
 \end{frame}
