--- a/source/lecture5/source.tex
+++ b/source/lecture5/source.tex
@@ -737,4 +737,14 @@ BVH::build_node(vector<Primitive> & primitives,
 \centerline{100k faces, 1024x1024, 512 spp, 1000 s}
 \end{frame}
 
+\begin{frame}[fragile]
+\frametitle{Оптимизации: результат}
+\slideimage{spheres.png}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Оптимизации: результат}
+\slideimage{cubes.png}
+\end{frame}
+
 \end{document}
