--- a/source/practice5/source.tex
+++ b/source/practice5/source.tex
@@ -52,6 +52,7 @@
 \item Поддержать треугольники в качестве геометрических примитивов
 \item Реализовать BVH с использованием SAH (можно binning, можно полный перебор)
 \item Использовать BVH для пересечения луча со сценой и для вычисления pdf при light sampling'е
+\item Разделение TLAS/BLAS делать не нужно
 \end{itemize}
 \end{frame}
 
